@@ -116,7 +116,7 @@ namespace Google.GData.Extensions {
             get { return this.xmlPrefix; }
         }
 
-          //////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////////////////////////////
         /// <summary>Parses an xml node to create a Who object.</summary> 
         /// <param name="node">georsswhere node</param>
         /// <param name="parser">AtomFeedParser to use</param>
